objects/ASI_eForm_Donation_Request_Line_Items__c.object
<CustomObject>
    <fields>
        <fullName>ASI_eForm_Donation_Request__c</fullName>
        <label>Donation Request</label>
        <referenceTo>ASI_eForm_Donation_Request__c</referenceTo>
        <relationshipLabel>Donation Request Line Items</relationshipLabel>
        <relationshipName>Donation_Request_Line_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Qty_Btl__c</fullName>
        <label>Qty(Btl)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_SKU_Code__c</fullName>
        <formula>ASI_eForm_SKU__r.Name</formula>
        <label>SKU Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_SKU__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SKU</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>ASI_KOR_SKU_Product__c.ASI_KOR_Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>ASI_KOR_SKU_Product__c.ASI_eForm_Name_for_Donation_Request__c</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ASI_KOR_SKU_Product__c</referenceTo>
        <relationshipLabel>Donation Request Line Items</relationshipLabel>
        <relationshipName>Donation_Request_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Total_Amount__c</fullName>
        <formula>ASI_eForm_Unit_Cost__c * ASI_eForm_Qty_Btl__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Unit_Cost__c</fullName>
        <label>Unit Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Donation Request Line Items</label>
    <nameField>
        <displayFormat>DRL-{000000}</displayFormat>
        <label>Donation Request Line Items No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Donation Request Line Items</pluralLabel>
    <recordTypes>
        <fullName>ASI_eForm_KR_Donation_Request_Line</fullName>
        <active>true</active>
        <label>KR Donation Request Line</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>